# faebot-research

./: .gitignore  README.md  extract_tweets.ipynb  openai.ipynb  pyproject.toml  sagemaker.ipynb
.ipynb_checkpoints/: extract_tweets-checkpoint.ipynb
