[tool.poetry]
name = "faebot-research"
version = "0.1.0"
description = "general faebot research and notebooks"
authors = ["transfaeries"]
readme = "README.md"
packages = [{include = "faebot_research"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.1"
wheel = "^0.37.1"
jupyterlab = "^3.5.0"
openai = "^0.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
